--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@emotion/core": "^10.0.35",
+    "bootstrap": "^4.5.2",
     "next": "9.5.3",
     "react": "16.13.1",
     "react-dom": "16.13.1"
