--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "bootstrap": "^4.5.2",
     "next": "9.5.3",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "styled-jsx": "^3.3.0"
   },
   "devDependencies": {
     "@types/react": "16.8.24",
