--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@material-ui/icons": "^4.9.1",
     "bootstrap": "^4.5.2",
     "next": "9.5.3",
+    "next-cookies": "^2.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "styled-jsx": "^3.3.0"
+    "styled-jsx": "^3.3.0",
+    "typescript": "^4.0.3"
   },
   "devDependencies": {
     "@types/react": "16.8.24",
@@ -32,7 +34,6 @@
     "eslint-plugin-jest": "24.0.0",
     "eslint-plugin-jsx-a11y": "6.3.1",
     "eslint-plugin-react": "7.20.3",
-    "eslint-plugin-react-hooks": "4.0.8",
-    "typescript": "4.0.3"
+    "eslint-plugin-react-hooks": "4.0.8"
   }
 }
