--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "@emotion/core": "^10.0.35",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@types/js-cookie": "^2.2.6",
     "bootstrap": "^4.5.2",
+    "formik": "^2.2.0",
+    "js-cookie": "^2.2.1",
     "next": "9.5.3",
     "next-cookies": "^2.0.3",
     "react": "16.13.1",
