--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
       "es2020.string"
     ],
     "allowJs": true,
-    "checkJs": true,
+    "checkJs": false,
     "strict": true,
     "noEmit": true,
     "jsx": "preserve",
