--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "migrate": "ley"
   },
   "dependencies": {
     "@emotion/core": "^10.0.35",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
     "@types/js-cookie": "^2.2.6",
+    "dotenv": "^8.2.0",
+    "dotenv-cli": "^4.0.0",
     "js-cookie": "^2.2.1",
+    "ley": "^0.6.0",
     "next": "9.5.3",
     "next-cookies": "^2.0.3",
+    "postgres": "^1.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "styled-jsx": "^3.3.0",
