--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "migrate": "ley"
+    "migrate": "dotenv ley"
   },
   "dependencies": {
     "@emotion/core": "^10.0.35",
